# Restore-the-Light

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt  bmp_loader.cpp  bmp_loader.h  fbo.h  frag-fbo.glsl  frag-fbo2.glsl  frag.glsl  hero.h  image.cpp  image.h  light.cpp  light.h  load_manager.cpp  load_manager.h  log.cpp  log.h  main.cpp  material.h  mesh.cpp  mesh.h  object3d.cpp  object3d.h  scene.h  shader.cpp  sources.txt  texture.cpp  vert-fbo.glsl  vert-fbo2.glsl  vert.glsl  virtual_camera.cpp  virtual_camera.h
headers/: collision_manager.h  enemy.h  fbo.h  game_map.h  globals.h  hero.h  image.h  light.h  light_friend.h  light_shot.h  load_manager.h  material.h  mesh.h  object3d.h  render.h  scene.h  shader.h  texture.h  virtual_camera.h
restore-the-light/headers/: enemy.h  fbo.h  game_map.h  globals.h  hero.h  light.h  light_friend.h  light_shot.h  load_manager.h  material.h  mesh.h  object3d.h  render.h  shader.h  virtual_camera.h
restore-the-light/shaders/: blur-fragment.glsl  geometry-pass-map-fragment.glsl  geometry-pass-map-texture-fragment.glsl  geometry-pass-map-vertex.glsl  get-glow-spots-fragment.glsl  light-ambient-fragment.glsl  light-vertex.glsl  multiply-two-textures-fragment.glsl
restore-the-light/source/: fbo.cpp  image.cpp  light.cpp  load_manager.cpp  main.cpp  mesh.cpp  object3d.cpp  render.cpp  texture.cpp  virtual_camera.cpp
shaders/: blur-fragment.glsl  default-directional-light-fragment.glsl  default-lighting-fragment.glsl  default-lighting-vertex.glsl  default-point-light-fragment.glsl  default-texture-fragment.glsl  default-texture-vertex.glsl  frag-blur.glsl  frag-glow.glsl  frag-map.glsl  frag-tex.glsl  frag.glsl  geometry-pass-map-texture-vertex.glsl  get-glow-spots-fragment.glsl  light-point-fragment.glsl  light-spot-fragment.glsl  sum-two-textures-fragment.glsl  temp.glsl  vert-tex.glsl  vert.glsl
source/: collision_manager.cpp  fbo.cpp  image.cpp  light.cpp  load_manager.cpp  main.cpp  mesh.cpp  object3d.cpp  render.cpp  shader.cpp  texture.cpp  virtual_camera.cpp
